# http-proxy-to-tun

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  install.sh  package.json  proxyvpn.install  tasks.py
crates/app/: Cargo.toml
crates/app/src/: config.rs  lib.rs  ops.rs  run.rs  teardown.rs  tun.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/firewall/: Cargo.toml
crates/firewall/src/: iptables.rs  lib.rs  nft.rs
crates/firewall/tests/: privileged.rs
crates/mark/: Cargo.toml
crates/mark/src/: iptables.rs  lib.rs  nft.rs
crates/mark/tests/: privileged.rs
crates/netlink/: Cargo.toml
crates/netlink/src/: lib.rs
crates/netlink/tests/: privileged.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: lib.rs
crates/proxyvpn/: Cargo.toml
crates/proxyvpn/src/: main.rs
crates/selftest/: Cargo.toml
crates/selftest/src/: main.rs  proxy_dns.rs
crates/selftest/tests/: privileged.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/capabilities/: default.json
crates/tauri-app/src/: commands.rs  connection.rs  error.rs  events.rs  lib.rs  main.rs  proxy_store.rs  settings.rs  state.rs  tray.rs  vpn.rs
crates/tunstack/: Cargo.toml
crates/tunstack/src/: conn.rs  device.rs  lib.rs  packet.rs  stack.rs
crates/util/: Cargo.toml
crates/util/src/: dns.rs  lib.rs
docs/: architecture.md
docs/agents/: README.md  app.md  cli.md  crates.md  firewall.md  mark.md  netlink.md  proxy.md  proxyvpn.md  selftest.md  state.md  tunstack.md  util.md
pkg/: PKGBUILD
scripts/: collect-debug.sh  collect_debug.py  install.py  install.sh  test-e2e.sh  test-privileged.sh  test_e2e.py
skills/: README.md
src/: cli.rs  firewall.rs  main.rs  netstate.rs  singbox.rs  state.rs  util.rs
ui/: biome.json  index.html  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/: ConnectionButton.tsx  ProxyFormModal.tsx  ProxyIdenticon.tsx  ProxyList.tsx  ProxySelector.tsx  SettingsView.tsx  StatusBar.tsx  ThemeSelector.tsx  Titlebar.tsx
ui/src/lib/: identicon.ts  tauri.ts
ui/src/stores/: connection.ts  proxies.ts  settings.ts
ui/src/styles/: globals.css  themes.css
