[package]
name = "http-tun"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "proxyvpn"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.29", features = ["signal", "process", "user"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
time = { version = "0.3", features = ["formatting"] }
url = "2.5"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
