[package]
name = "proxyvpn-firewall"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
mnl.workspace = true
nftnl.workspace = true
nix.workspace = true
proxyvpn-state = { path = "../state" }
proxyvpn-util = { path = "../util" }

[features]
privileged-tests = []
