[package]
name = "http-tun-desktop"
version.workspace = true
edition.workspace = true
description = "Desktop UI for http-tun system-wide HTTP proxy"
default-run = "http-tun-desktop"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
anyhow.workspace = true
dirs.workspace = true
keyring.workspace = true
libc.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { workspace = true, features = ["image-png"] }
tauri-plugin-shell.workspace = true
tokio.workspace = true
tun.workspace = true
uuid.workspace = true
reqwest.workspace = true

# Internal crates
proxyvpn-app = { path = "../app" }
proxyvpn-firewall = { path = "../firewall" }
proxyvpn-mark = { path = "../mark" }
proxyvpn-netlink = { path = "../netlink" }
proxyvpn-proxy = { path = "../proxy" }
proxyvpn-state = { path = "../state" }
proxyvpn-tunstack = { path = "../tunstack" }
proxyvpn-util = { path = "../util" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "http-tun-desktop"
path = "src/main.rs"

[lib]
name = "http_tun_desktop"
crate-type = ["rlib"]
